--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/barcode-scanner": "^4.5.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/dialogs": "^4.20.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/toast": "^5.19.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-x-toast": "^2.7.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngx-qrcode2": "0.0.5",
-    "phonegap-plugin-barcodescanner": "git+https://github.com/phonegap/phonegap-plugin-barcodescanner.git",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -47,12 +50,15 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "phonegap-plugin-barcodescanner": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-x-toast": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
